# ptolemy

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pylintrc  404.html  CHANGELOG.md  CONTRIBUTING  Cargo.toml  Dockerfile  GitFlow.yml  LICENSE  Makefile  README.md  ROADMAP.md  bump_version.py  docker-compose.test.yml  docker-compose.yml  index.html  prometheus.yml  ptolemy.yml  pyproject.toml  redis.ipynb  rustfmt.toml  sitemap.xml  test.ipynb  test.prof  test.py  test.yml  test_enums.py  test_graphql.py
api/: Cargo.toml  Dockerfile  alembic.ini  configure.sh  database.py  diesel.toml  entrypoint.sh  env_settings.py  main.py  models.py
api/alembic/: env.py
api/alembic/versions/: 04540c2575f8_initial_migration.py  2b804c29fb52_initial_migration.py  34bfbf8c2864_initial_migration.py  b354972f9b6a_initial_migration.py  e474779ad143_initial_migration.py  fc509710fc79_initial_migration.py
api/db/: __init__.py  database.py  models.py
api/diesel/2024-12-09-054830_create_workspace_table/: down.sql  up.sql
api/diesel/2024-12-17-195437_event_tables/: down.sql  up.sql
api/diesel/2024-12-23-085222_auth/: down.sql  up.sql
api/diesel/2024-12-30-110527_records-index/: down.sql  up.sql
api/diesel/2025-01-03-143409_workspace-archived-not-null/: down.sql
api/diesel/2025-01-14-121627_log-auditing/: down.sql  up.sql
api/diesel/2025-02-08-225602_query-schema/: down.sql  up.sql
api/diesel/2025-02-14-180254_record-auditing/: down.sql  up.sql
api/diesel/2025-03-17-221146_update-unique-constraints/: down.sql  up.sql
api/graphql/: schema.gql
api/migrations/2024-12-09-054830_create_workspace_table/: up.sql
api/migrations/clickhouse/: 20241207143205_init_materialized_views.sql
api/src/: ch_models.rs  config.rs  crypto.rs  db.rs  env_settings.rs  error.rs  executor.rs  lib.rs  main.rs  middleware.rs  models.rs  observer.rs  run.rs  schema.rs  state.rs  writer.rs
api/src/click/: types.rs
api/src/config/: kafka.rs  mod.rs  stdout.rs
api/src/crud/: admin.rs  conn.rs  crud_utils.rs  crypto.rs  error.rs  mod.rs  prelude.rs  query.rs  service_api_key.rs  user.rs  user_api_key.rs  workspace.rs  workspace_user.rs
api/src/graphql/: executor.rs  mod.rs  mutation.rs  query.rs  result.rs  state.rs
api/src/middleware/: auth.rs  headers.rs  jwt.rs  master.rs  mod.rs  request_context.rs  shutdown.rs  tracing.rs
api/src/models/: crypto.rs  enum_utils.rs  enums.rs  events.rs  iam.rs  mod.rs  query.rs  record.rs  schema.rs  workspace.rs
api/src/observer/: claims.rs  interceptor.rs  mod.rs  records.rs  service.rs
api/src/routes/: auth.rs  base.rs  graphql.rs  middleware.rs  mod.rs  user.rs  workspace.rs  workspace_user.rs
api/src/services/: mod.rs
api/src/sink/: kafka.rs  mod.rs  sink.rs  sink_message.rs  stdout.rs
api/src/v1/: mod.rs  shutdown.rs  state.rs
dummy/: Cargo.toml
integration-tests/: pyproject.toml
integration-tests/integration_tests/: base.py  test_sql.py  test_sysadmin_permissions.py  test_user.py  test_write.py
observer/: Cargo.toml  Dockerfile  build.rs
observer/src/: lib.rs  observer.rs  parser.rs  server.rs
prototype/: Dockerfile  README.md  app.py  pyproject.toml
prototype/.streamlit/: config.toml
prototype/prototype/: __init__.py  auth.py  client.py  duckdb.py  env_settings.py  models.py  profile.py  sql_ide.py  user.py  workspace.py
prototype/prototype/gql/: change_workspace_user_role.gql  create_workspace.gql  delete_user_from_workspace.gql  delete_workspace.gql  service_api_keys.gql  user_api_keys.gql  user_workspace_role.gql  user_workspaces.gql  workspace_users.gql
prototype/prototype/models/: __init__.py  auth.py  duckdb.py  enums.py
prototype/prototype/sql/: postgres_conn.sql.j2  record_tables.sql.j2
prototype/prototype/workspace/: api_key_management.py  user_management.py  view.py  workspace_management.py
prototype/ptolemy-ui/: package-lock.json  package.json  tailwind.config.js
prototype/ptolemy-ui/src/: App.tsx  Home.tsx  constants.ts  grpc.ts  index.css  main.tsx
ptolemy/: CHANGELOG.md  Cargo.toml  Dockerfile  app.py  build.rs  configure.sh  diesel.toml  entrypoint.sh  pyproject.toml  streamlit_app.py
ptolemy-core/: Cargo.toml  build.rs
ptolemy-core/proto/: observer.proto
ptolemy-core/src/: lib.rs  parser.rs
ptolemy-py/: Cargo.toml  pyproject.toml
ptolemy-py/.codspeed/: results_1753707711483.json  results_1753707759705.json  results_1753707842188.json  results_1753707881366.json  results_1753707954237.json  results_1753707991904.json  results_1753708605456.json  results_1753708633252.json
ptolemy-py/examples/: getting_started_usage.py
ptolemy-py/python/ptolemy_client/: __init__.py  _core.pyi  client.py  io.py  trace.py
ptolemy-py/src/: lib.rs  mod.rs  runtime.rs  types.rs  v1.rs
ptolemy-py/src/client/: core.rs
ptolemy-py/tests/: test_codecov.py  test_io.py  test_trace.py  test_validation.py
ptolemy/.streamlit/: config.toml
ptolemy/examples/: getting_started_usage.py
ptolemy/graphql/: mutation.gql  query.gql  schema.gql
ptolemy/proto/: graphql.proto  observer.proto  observer_pb2.py  observer_pb2.pyi  observer_pb2_grpc.py  query_engine.proto  record_publisher.proto
ptolemy/prototype/: auth.py  user.py
ptolemy/src/: client.rs  config.rs  error.rs  event.rs  lib.rs  parser.rs  publish.rs  record.rs  server.rs  types.rs  utils.rs  writer.rs
query-engine/: Dockerfile  README.md  main.py  pyproject.toml  test.py
query-engine/query_engine/: __init__.py  consumer.py  db.py  env_settings.py  query_executor.py  router.py  routes.py  state.py  status.py
tvali/: .dockerignore  Dockerfile  __init__.py  config.py  log.py  pyproject.toml  streamlit_app.py
tvali-client/: pyproject.toml
tvali-client/tvali_client/: __init__.py  client.py  config.py  log.py
tvali-streamlit/: Dockerfile  main.py  main_old.py  pyproject.toml
tvali-streamlit/tvali_streamlit/: layout.py
tvali/client/: base.py  client.py  console.py  types.py
tvali/log/: base.py  models.py  types.py
tvali/records/: records.py  types.py
tvali/tvali/: __init__.py  __main__.py  config.py  main.py
(+563 files in other folders)
