[workspace]
members = [
    "ptolemy",
    "api"
, "ptolemy-core", "observer"]
resolver = "2"

[workspace.dependencies]
tonic = "0.12.3"
prost = "*"
tokio = { version = "1.41.1", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.5"
tonic-types = "0.12.3"
prost-types = "0.13.4"
clickhouse = { version = "0.13.1", features = ["uuid", "time"] }
serde = {version = "1.0.216", features = ["derive"] }
serde_repr = "0.1.19"
uuid = {version = "1.11.0", features = ["serde", "v7"] }
serde_json = "1.0.133"
axum = "0.7.9"
bb8 = "0.8.6"
chrono = { version = "0.4.39", features=["serde"] }
diesel = { version = "2.2.6", features = ["postgres", "chrono", "uuid"] }
diesel-async = { version = "0.5.2", features = ["postgres", "bb8"] }
hyper = "1.5.1"
juniper = "0.16.1"
juniper_axum = "0.1.1"
time = "0.3.37"
