[workspace]
members = [
    "ptolemy",
    "api", 
    "dummy"]

default-members = [
    "api",
    "ptolemy",
    "dummy",
]
resolver = "2"

[workspace.dependencies]
tonic = "0.12.3"
prost = "*"
tokio = { version = "1.41.1", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.5"
tonic-types = "0.12.3"
prost-types = "0.13.4"
serde = {version = "1.0.216", features = ["derive"] }
serde_repr = "0.1.19"
uuid = {version = "1.11.0", features = ["serde", "v7", "v4", "v5"] }
serde_json = "1.0.133"
axum = {version = "0.7.9", features = ["tokio"] }
bb8 = "0.8.6"
chrono = { version = "0.4.39", features=["serde"] }
diesel = { version = "2.2.6", features = ["postgres", "chrono", "uuid", "serde_json", "ipnet-address"] }
diesel-async = { version = "0.5.2", features = ["postgres", "bb8"] }
hyper = "1.5.1"
juniper = { version = "0.16.1", features = ["chrono", "uuid", "schema-language"] }
juniper_axum = "0.1.1"
time = "0.3.37"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["fmt", "env-filter"] }
heck = "0.5.0"
ring = "0.17.8"
base64 = "0.22.1"
tower-http = { version = "0.6.2", features = ["trace"] }
argon2 = "0.5.3"
tower = "0.5.2"
jsonwebtoken = "9.3.0"
ipnet = {version = "2.10.1", features = ["json", "serde"]}
pin-project-lite = "0.2.16"
reqwest = { version = "0.12.12", features = ["json"] }
