[project]
name = "ptolemy-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.4"
]

[tool.uv.workspace]
members = ["ptolemy", "prototype"]

[tool.uv.sources]
prototype = { workspace = true }
ptolemy = { workspace = true }

[dependency-groups]
dev = [
    "black>=24.10.0",
]

[tool.black]
include = '\.pyi?$'
