[project]
name = "ptolemy-workspace"
version = "0.1.0-alpha.5+15116f7"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "pydantic>=2.10.4",]

[dependency-groups]
dev = [ "black>=24.10.0", "duckdb>=1.1.3", "jupyter>=1.1.1", "maturin>=1.8.2", "pylint>=3.3.3", "pylint-pydantic>=0.3.4", "pytest>=8.3.4", "python-semantic-release>=9.20.0", "pytoml>=0.1.21", "tqdm>=4.67.1",]

[tool.black]
include = "\\.pyi?$"

[tool.uv.workspace]
members = [ "ptolemy", "prototype", "docs", "query-engine", "integration-tests",]

[tool.uv.sources.prototype]
workspace = true

[tool.uv.sources.ptolemy]
workspace = true

[tool.uv.sources.docs]
workspace = true
