[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "generate-gql-schema"
path = "src/bin/generate_gql_schema.rs"

[[bin]]
name = "create-query-engine-role"
path = "src/bin/create_query_engine_role.rs"

[package]
name = "api"
version = "0.1.0-alpha.31+af543dc"
edition = "2021"

[dependencies]
http = "1.2.0"
r2d2 = "0.8.10"
tokio-stream = "0.1.17"
tonic-web = "0.12.3"

[dependencies.async-graphql]
version = "7.0.15"
features = [ "uuid", "chrono",]

[dependencies.axum]
workspace = true

[dependencies.bb8]
workspace = true

[dependencies.chrono]
workspace = true

[dependencies.diesel]
workspace = true

[dependencies.diesel-async]
workspace = true

[dependencies.hyper]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.serde_repr]
workspace = true

[dependencies.time]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.uuid]
workspace = true

[dependencies.tonic]
workspace = true

[dependencies.prost]
workspace = true

[dependencies.tonic-types]
workspace = true

[dependencies.prost-types]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.tracing-subscriber]
workspace = true

[dependencies.ring]
workspace = true

[dependencies.base64]
workspace = true

[dependencies.tower-http]
workspace = true
features = [ "cors",]

[dependencies.argon2]
workspace = true

[dependencies.tower]
workspace = true

[dependencies.jsonwebtoken]
workspace = true

[dependencies.ipnet]
workspace = true

[dependencies.heck]
workspace = true

[dependencies.pin-project-lite]
workspace = true

[dependencies.diesel_migrations]
version = "2.2.0"
features = [ "postgres",]

[dependencies.redis]
version = "0.28.2"
features = [ "aio", "r2d2", "tokio-comp",]

[dependencies.ptolemy]
path = "../ptolemy"
