[[bin]]
name = "api"
path = "src/main.rs"

[package]
name = "api"
version = "0.1.0-alpha.48+629addd"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
figment = { version = "0.10.19", features = ["yaml", "env"] }
futures = "0.3.31"
http = "1.2.0"
tokio-stream = "0.1.17"
tonic-web = "0.12.3"

[dependencies.axum]
workspace = true

[dependencies.bb8]
workspace = true

[dependencies.chrono]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.serde_repr]
workspace = true

[dependencies.time]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.uuid]
workspace = true

[dependencies.tonic]
workspace = true

[dependencies.prost]
workspace = true

[dependencies.tonic-types]
workspace = true

[dependencies.prost-types]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.tracing-subscriber]
workspace = true

[dependencies.ring]
workspace = true

[dependencies.base64]
workspace = true

[dependencies.tower-http]
workspace = true
features = [ "cors",]

[dependencies.argon2]
workspace = true

[dependencies.tower]
workspace = true

[dependencies.jsonwebtoken]
workspace = true

[dependencies.diesel_migrations]
version = "2.2.0"
features = [ "postgres",]

[dependencies.ptolemy]
path = "../ptolemy"
