[package]
name = "dummy"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tonic-types = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_repr = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
bb8 = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
hyper = { workspace = true }
juniper = { workspace = true }
juniper_axum = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
heck = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
tower-http = { workspace = true }
argon2 = { workspace = true }
tower = { workspace = true }
jsonwebtoken = { workspace = true }
ipnet = { workspace = true }
pin-project-lite = { workspace = true }
hex = { workspace = true }
