[project]
name = "integration-tests"
version = "0.1.0-beta.26"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "ptolemy-client", "pydantic>=2.10.4", "pytest>=8.3.4", "requests>=2.32.3",]

[tool.uv.sources.ptolemy-client]
path = "../ptolemy-py"
