[package]
name = "observer"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
prost = "*"
tokio = { version = "1.41.1", features = ["full"] }
prost-types = "0.13.4"
clickhouse = { version = "0.13.1", features = ["uuid", "time"] }
log = "0.4.22"
env_logger = "0.11.5"
serde = {version = "1.0.216", features = ["derive"] }
serde_repr = "0.1.19"
uuid = "1.11.0"

[[bin]]
name = "server"
path = "src/server.rs"

[build-dependencies]
tonic-build = "0.12.3"
