[package]
name = "observer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "observer"
path = "src/observer.rs"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tonic-types = { workspace = true }
prost-types = { workspace = true }
clickhouse = { workspace = true }
serde = { workspace = true }
serde_repr = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
ptolemy-core = { path = "../ptolemy-core" }
