[package]
name = "ptolemy-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tonic-types = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
heck = { workspace = true }
[build-dependencies]
tonic-build = "0.12.3"
