[package]
name = "ptolemy-client"
version = "0.1.0-alpha.53+7836cd7"
edition = "2021"

[lib]
name = "ptolemy_client"
crate-type = [ "cdylib",]

[features]
vendored = [ "ptolemy/vendored",]

[dependencies]
once_cell = "1.21.3"

[dependencies.pyo3]
version = "0.23.3"
features = [ "chrono", "abi3-py311", "multiple-pymethods", "extension-module",]

[dependencies.openssl]
version = "0.10.72"
features = [ "vendored",]

[dependencies.uuid]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.tonic]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.ptolemy]
path = "../ptolemy"
