[package]
name = "ptolemy"
version = "0.1.0-alpha.10+e7fe34f"
edition = "2021"

[lib]
name = "ptolemy"
crate-type = [ "cdylib", "rlib",]

[features]
extension-module = [ "pyo3/extension-module", "pyo3-ffi/extension-module",]
python = [ "pyo3", "pyo3-ffi",]
client = [ "python", "extension-module",]

[build-dependencies]
tonic-build = "0.12.3"
apollo-compiler = "0.11.3"

[build-dependencies.heck]
workspace = true

[dependencies.pyo3]
version = "0.23.3"
features = [ "chrono", "abi3-py311", "multiple-pymethods",]
optional = true

[dependencies.pyo3-ffi]
version = "0.23.3"
optional = true

[dependencies.tonic]
workspace = true

[dependencies.prost]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.log]
workspace = true

[dependencies.env_logger]
workspace = true

[dependencies.tonic-types]
workspace = true

[dependencies.prost-types]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_repr]
workspace = true

[dependencies.uuid]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.chrono]
workspace = true

[dependencies.heck]
workspace = true

[dependencies.reqwest]
workspace = true

[dependencies.tracing]
workspace = true
