[project]
name = "ptolemy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Raz Besaleli", email = "rbesaleli@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.10",
    "pydantic>=2.10.4",
    "tenacity>=9.0.0",
]

[project.scripts]
ptolemy = "ptolemy:main"

[tool.maturin]
module-name = "ptolemy._core"
python-packages = ["ptolemy"]
python-source = "python"
strip = true

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
