[project]
name = "ptolemy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Raz Besaleli", email = "rbesaleli@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.10",
    "pydantic>=2.10.4",
    "questionary>=2.1.0",
    "tenacity>=9.0.0",
    "prompt-toolkit>=3.0.48",
    "click>=8.1.8",
    "tabulate>=0.9.0",
    "pandas>=2.2.3",
]

[project.scripts]
ptolemy = "ptolemy:main"

[tool.maturin]
module-name = "ptolemy._core"
python-packages = ["ptolemy"]
python-source = "python"
strip = true

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "maturin-import-hook>=0.2.0",
]
