[project]
name = "query-engine"
version = "0.1.0-alpha.36+feb047c"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "duckdb>=1.1.3", "fastapi[standard]>=0.115.8", "pandas>=2.2.3", "pyarrow>=18.1.0", "pydantic>=2.10.4", "redis>=5.2.1", "uvicorn[standard]>=0.34.0",]
