[tool.poetry]
name = "tvali-client"
version = "0.1.0"
description = ""
authors = ["Raz Besaleli <rbesaleli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
aiohttp = "^3.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
