[tool.poetry]
name = "tvali"
version = "0.1.0"
description = ""
authors = ["Raz Besaleli <rbesaleli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = {version = "^3.11.0", optional = true}
fastapi = {extras = ["standard"], version = "^0.115.4", optional = true}
uvicorn = {version = "^0.32.0", optional = true}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36", optional = true}
psycopg = {version = "^3.2.3", optional = true}
strawberry-graphql = {extras = ["fastapi"], version = "^0.248.1", optional = true}

[tool.poetry.extras]
api = ["fastapi", "uvicorn", "sqlalchemy", "psycopg", "strawberry-graphql"]
client = ["aiohttp"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-sugar = "^1.0.0"
black = "^24.10.0"
pylint-pydantic = "^0.3.2"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
