[tool.poetry]
name = "tvali"
version = "0.1.0"
description = ""
authors = ["Raz Besaleli <rbesaleli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.11.0"
fastapi = {extras = ["standard"], version = "^0.115.4", optional = true}
uvicorn = {version = "^0.32.0", optional = true}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36", optional = true}
psycopg = {version = "^3.2.3", optional = true}
openai = {version = "^1.54.4", optional = true}
anthropic = {version = "^0.39.0", optional = true}
cohere = {version = "^5.11.3", optional = true}
groq = {version = "^0.12.0", optional = true}
strawberry-graphql = {version = "^0.248.1", optional = true}

[tool.poetry.extras]
api = ["fastapi", "uvicorn", "sqlalchemy", "psycopg", "strawberry-graphql"]
openai = ["openai"]
anthropic = ["anthropic"]
cohere = ["cohere"]
groq = ["groq"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-sugar = "^1.0.0"
black = "^24.10.0"
pylint-pydantic = "^0.3.2"
pylint = "^3.3.1"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
pytest-dependency = "^0.6.0"
pytest-cov = "^6.0.0"
pytest-profiling = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
